--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,15 +15,16 @@
     <form class="" submit="onSubmit()">
         <div class="form-group">
             <label for="title" class="form-label">Job Title</label>
-            <input type="text" class="form-control" id="title" name="title" [(ngModel)]="newJob.title">
+            <input type="text" class="form-control" id="title" name="title" [(ngModel)]="newJob.title" #spy required>
         </div>
         <div class="form-group">
             <label for="company" class="form-label">Company</label>
-            <input type="text" class="form-control" id="company" name="company" [(ngModel)]="newJob.company">
+            <input type="text" class="form-control" id="company" name="company" [(ngModel)]="newJob.company" required>
         </div>
         <div class="form-group">
             <input type="submit" class="btn btn-primary">
         </div>
+        <p>{{spy.className}}</p>
     </form>
     <router-outlet></router-outlet>
 </div>
